tests/checker/bad/bad_fields3.scilla
scilla_version 0

contract Empty
()

field bad_bar : List (String -> Int32) = Nil {(String -> Int32)}

transition dummy()

end
